--- a/public/home.html
+++ b/public/home.html
@@ -15,7 +15,7 @@
            <nav class="navbar">
                <ul>
                    <li><a href="#">Inicio </a></li>
-                   <li><a href="https://editor-next.swagger.io">Swagger </a></li>
+                   <li><a href="#">Swagger </a></li>
                    <li><a href="#">Peliculas </a></li>
                    <li><a href="#">Contacto</a></li>
                    <li> <a href="/login" class="btn-1">Login</a></li>
