--- a/public/login.html
+++ b/public/login.html
@@ -9,6 +9,7 @@
     <title>Login CINEMA</title>
 </head>
 <body [fullscreenn]="true">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 <div id="main" class="login-container">
 <div id="titulo" class="login-box">
     <h1>CINEMAX</h1>
