--- a/public/registro.html
+++ b/public/registro.html
@@ -8,7 +8,8 @@
     <title>Registro CINEMAX</title>
 </head>
 <body>
-<div id="main" class="register-container">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+  <div id="main" class="register-container">
   <div id="titulo" class="register-box">
     <h1>REGÍSTRATE EN CINEMAX</h1>
     <form id="registro-form" >
