--- a/public/home.html
+++ b/public/home.html
@@ -14,12 +14,11 @@
            <label for="menu"></label>
            <nav class="navbar">
                <ul>
-                   <li><a href="#">Inicio </a></li>
+                   <li><a href="/home.html">Inicio </a></li>
                    <li><a href="#">Peliculas </a></li>
-                   <li><a href="#">Contacto</a></li>
+                   <li><a href="/cines.html">Cines</a></li>
                    <li> <a href="/login" class="btn-1">Login</a></li>
-                   <button id="logincerrar">Cerrar</button> 
-                  
+                   <li><button id="logoutBtn" class="logoutBtn">Cerrar</button> </li>
                </ul>
            </nav>
           
