--- a/public/home.html
+++ b/public/home.html
@@ -35,6 +35,18 @@
        <hr>
        <div id="image-container" class="container"></div>
    </section>
+   <form id="comment-form">
+    <label for="pelicula-input">Nombre de la pelicula:</label>
+    <input type="text" id="pelicula-input" name="pelicula">
+
+    <label for="comment-input">Comentario:</label>
+    <input type="text" id="comment-input" name="comment">
+
+    <button type="submit">Enviar comentario</button>
+</form>
+
+
+<div id="comentarioPeli-container"></div>
    
    <footer class="footer container">
        <h3>Cinemax</h3>
@@ -48,5 +60,6 @@
    <script src="images.js" type="module"></script>
    <script src="moviedetails.js" type="module"></script>
    <script src="app.js" type="module"></script>
+   <script src="home.js" type="module"></script>
 </body>
 </html>
