--- a/public/cine.html
+++ b/public/cine.html
@@ -15,7 +15,7 @@
       <nav class="navbar">
         <ul>
           <li><a href="home.html">Peliculas</a></li>
-          <li><a href="cines.html">Cines</a></li>
+          <li><a href="cine.html">Cines</a></li>
           <li><a href="/login" class="btn-1">Login</a></li>
           <li><button id="logoutBtn" class="logoutBtn">Cerrar</button> </li>
         </ul>
