--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,7 @@
                <ul>
                    <li><a href="/home.html">Inicio </a></li>
                    <li><a href="#">Peliculas </a></li>
-                   <li><a href="/cines.html">Cines</a></li>
+                   <li><a href="/cine.html">Cines</a></li>
                    <li> <a href="/login" class="btn-1">Login</a></li>
                    <li><button id="logoutBtn" class="logoutBtn">Cerrar</button> </li>
                </ul>
